<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.SignInActivity">

    <TextView
        android:id="@+id/tvTitleSignInText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <TextView
        android:id="@+id/tvSubTitleSignInText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hi_welcome_back_please_login_to_your_account"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleSignInText"
        app:layout_constraintVertical_bias="0.01999998" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmailSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitleSignInText"
        app:layout_constraintVertical_bias="0.16000003"
        app:layout_constraintWidth_max="488dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextEmailSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorSecondaryVariant"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutPasswordSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutEmailSignIn"
        app:layout_constraintVertical_bias="0.04000002"
        app:layout_constraintWidth_max="488dp"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTextPasswordSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorSecondaryVariant"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"
        android:layout_marginVertical="16dp"
        android:layout_marginHorizontal="20dp"
        android:gravity="end"
        app:layout_constraintWidth_max="488dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutPasswordSignIn"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnSignInSignIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword"
        app:layout_constraintVertical_bias="0.20999998"
        app:layout_constraintWidth_max="320dp" />

    <TextView
        android:id="@+id/tvSignUpMessageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvSignUpSignIn"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignInSignIn"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/tvSignUpSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvSignUpMessageText"
        app:layout_constraintTop_toBottomOf="@+id/btnSignInSignIn"
        app:layout_constraintVertical_bias="0.9" />
</androidx.constraintlayout.widget.ConstraintLayout>